--- a/xtestivaa/styles.css
+++ b/xtestivaa/styles.css
@@ -1,12 +1,14 @@
             
             h1 {
             color: rgb(74, 147, 10);
+            margin: 15px 0 0 50px;
             }
             h3 {
             color: rgb(203, 11, 187);
             }
             p {
             color: rgb(213, 5, 255);
+            margin: 20px 0 0 50px;
             }
             body {
             background-color: rgb(76, 3, 61);
@@ -34,8 +36,9 @@
         padding: 5px 15px;
         border: none;
         cursor: pointer;
-        margin: 0 0 10px 65px;
+        margin: -500px 0 10px 769px;
         border: 1px solid #be0ca4;
+        transition: background-color 0.3s ease;
       }
       
       .transition-button:hover {
@@ -57,7 +60,9 @@
     form {
       display: flex;
       flex-direction: column;
-      gap: 10px;
+      gap: 1px;
+      margin: 10px 0 30px 50px;
+      width: 960px;
     }
     
     label {
@@ -82,3 +87,70 @@
     input[type="submit"]:hover {
       background-color: #45a049;
     }
+
+
+.animation-box {
+    margin: 20px 0 0 0;
+    width: 50px;
+    height: 10px;
+    background-color: rgb(62, 17, 165);
+    position: relative;
+    animation: move 1s infinite alternate;
+    }
+      
+  @keyframes move {
+    from {
+      left: 0;
+    }
+    to {
+      left: 1000px;
+    }
+  }
+
+
+
+  .pseudo-list li:nth-child(odd) {
+        background-color: rgb(223, 10, 10);
+        margin: 0 0 0 20px;
+        width: 800px;
+      }
+      
+      .pseudo-list li:nth-child(even) {
+        margin: 0 0 0 20px;
+        background-color: white;
+        width: 800px
+      }
+
+
+.filter-image {
+        max-width: 100%;
+        height: 450px;
+        margin: 15px 0 0 50px;
+        filter: grayscale(100%);
+        transition: filter 0.2s ease;
+      }
+      
+      .filter-image:hover {
+        filter: grayscale(0%);
+      }
+
+
+
+.quote {
+        position: relative;
+        padding-left: 20px;
+        font-style: italic;
+      }
+      
+      .quote::before {
+        content: '“';
+        font-size: 40px;
+        position: absolute;
+        left: 0;
+        top: 0;
+        color: rgb(170, 165, 165);
+      }
+
+
+
+
